@@ -30,6 +30,10 @@ INSP.INTN.remove.section.family=Remove section
 #SmkCondaSectionNotAllowedWithRun
 INSP.NAME.conda.section.not.allowed.with.run=Conda environments are not allowed with run directive.
 
+# SmkSectionMultilineStringArgsInspection.kt
+INSP.NAME.section.multiline.string.args=Multiline section string argument
+INSP.NAME.section.multiline.string.args.message=Multiline string argument in ''{0}'' will be considered as concatenation. Maybe comma is missing.
+
 # SmkSectionMultipleArgsInspection
 INSP.NAME.section.multiple.args=Only one argument is allowed for this section.
 INSP.NAME.section.multiple.args.message=Only one argument is allowed for ''{0}'' section.
