@@ -1,0 +1,6 @@
+<html>
+<body>
+Sections string arguments not separated by comma will be concatenated to a larger string at runtime. This isn't a bug,
+but maybe a comma separator is missing.
+</body>
+</html>
